--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,39 +1,78 @@
-name: Build, Test, Deploy Spring Boot App
+#name: Build, Test, Deploy Spring Boot App
+#
+#on:
+#  push:
+#    branches: [main]
+#
+#jobs:
+#  build:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v3
+#
+#      - name: Set up JDK 17
+#        uses: actions/setup-java@v3
+#        with:
+#          java-version: '17'
+#
+#      - name: Build with Maven
+#        run: mvn clean install -DskipTests
+#
+#      - name: Run Tests
+#        run: mvn test
+#
+#      - name: Build Docker Image
+#        uses: docker/build-push-action@v3
+#        with:
+#          context: .
+#          push: false
+#          tags: oewumi/ci-cd-pipeline:latest
+#
+#      # Optional: Push image to Docker Hub after manual login step later
+#
+#      - name: (Optional) Push Docker Image
+#        uses: docker/build-push-action@v3
+#        with:
+#          context: .
+#          push: true
+#          tags: |
+#            oewumi/ci-cd-pipeline:latest
 
+
+# Name of the workflow
+name: CI/CD Pipeline for Docker
+
+# Define the events that trigger the workflow
 on:
-  push:
-    branches: [main]
+  push: # Trigger the workflow on push events
+    branches:
+      - main # Only trigger on pushes to the main branch
+  pull_request: # Trigger the workflow on pull request events
+    branches:
+      - main # Only trigger on pull requests to the main branch
 
+# Define the jobs to be run as part of the workflow
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest # Specify the runner environment
+
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout code # Step to checkout the repository code
+        uses: actions/checkout@v2 # Use the pre-built checkout action
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
+      - name: Set up JDK 17 # Step to set up Java Development Kit version 17
+        uses: actions/setup-java@v2 # Use the pre-built setup-java action
         with:
-          java-version: '17'
+          java-version: '17' # Specify the JDK version
 
-      - name: Build with Maven
-        run: mvn clean install -DskipTests
+      - name: Build with Maven # Step to build the project using Maven
+        run: mvn clean install # Run the Maven clean and install commands
 
-      - name: Run Tests
-        run: mvn test
+      - name: Login to Docker Hub # Step to log in to Docker Hub
+        run: docker login -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PASSWORD}}  # Login with secrets
 
-      - name: Build Docker Image
-        uses: docker/build-push-action@v3
-        with:
-          context: .
-          push: false
-          tags: oewumi/ci-cd-pipeline:latest
+      - name: Build Docker image # Step to build the Docker image
+        run: docker build -t oewumi/ci-cd-pipeline:v1.0 . # Build the Docker image with the specified tag
 
-      # Optional: Push image to Docker Hub after manual login step later
-
-      - name: (Optional) Push Docker Image
-        uses: docker/build-push-action@v3
-        with:
-          context: .
-          push: true
-          tags: |
-            oewumi/ci-cd-pipeline:latest
+      - name: Push Docker image # Step to push the Docker image to Docker Hub
+        run: docker push oewumi/ci-cd-pipeline:v1.0 # Push the Docker image with the specified tag
