--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,44 +1,3 @@
-#name: Build, Test, Deploy Spring Boot App
-#
-#on:
-#  push:
-#    branches: [main]
-#
-#jobs:
-#  build:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@v3
-#
-#      - name: Set up JDK 17
-#        uses: actions/setup-java@v3
-#        with:
-#          java-version: '17'
-#
-#      - name: Build with Maven
-#        run: mvn clean install -DskipTests
-#
-#      - name: Run Tests
-#        run: mvn test
-#
-#      - name: Build Docker Image
-#        uses: docker/build-push-action@v3
-#        with:
-#          context: .
-#          push: false
-#          tags: oewumi/ci-cd-pipeline:latest
-#
-#      # Optional: Push image to Docker Hub after manual login step later
-#
-#      - name: (Optional) Push Docker Image
-#        uses: docker/build-push-action@v3
-#        with:
-#          context: .
-#          push: true
-#          tags: |
-#            oewumi/ci-cd-pipeline:latest
-
-
 # Name of the workflow
 name: CI/CD Pipeline for Docker
 
@@ -69,11 +28,26 @@ jobs:
       - name: Build with Maven # Step to build the project using Maven
         run: mvn clean install # Run the Maven clean and install commands
 
-      - name: Login to Docker Hub # Step to log in to Docker Hub
-        run: docker login -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PASSWORD}}  # Login with secrets
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build Docker image # Step to build the Docker image
-        run: docker build -t oewumi/ci-cd-pipeline:v1.0 . # Build the Docker image with the specified tag
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: oewumi/ci-cd-pipeline:${{ github.sha }}
 
-      - name: Push Docker image # Step to push the Docker image to Docker Hub
-        run: docker push oewumi/ci-cd-pipeline:v1.0 # Push the Docker image with the specified tag
+
+#      - name: Login to Docker Hub # Step to log in to Docker Hub
+#        run: docker login -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PASSWORD}}  # Login with secrets
+#
+#      - name: Build Docker image # Step to build the Docker image
+#        run: docker build -t oewumi/ci-cd-pipeline:v1.0 . # Build the Docker image with the specified tag
+#
+#      - name: Push Docker image # Step to push the Docker image to Docker Hub
+#        run: docker push oewumi/ci-cd-pipeline:v1.0 # Push the Docker image with the specified tag
+
