--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -34,12 +34,15 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and push Docker image
+      - name: Build and push docker image
         uses: docker/build-push-action@v2
         with:
           context: .
           push: true
           tags: oewumi/ci-cd-pipeline:${{ github.sha }}
+          build-args: |
+            JAR_FILE=target/ci-cd-pipeline-*.jar
+      
 
       - name: Trigger Render deployment
         uses: fjogeleit/http-request-action@v1
