--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -34,6 +34,9 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+      - name: Rename jar for Docker build
+        run: mv target/ci-cd-pipeline-*.jar target/ci-cd-pipeline.jar
+
       - name: Build and push docker image
         uses: docker/build-push-action@v2
         with:
